bynkc/tests/fixtures/negative/222_signature_on_cron/src/demo.bynk
context demo

actor Hook { auth = Signature(secret = "WH", header = "X-Sig") }

service jobs from cron {
  on schedule("* * * * *") () -> Effect[Result[(), String]] by Hook {
    Ok(())
  }
}
